--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Logs
 logs
 *.log
+.idea
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -102,3 +103,4 @@ dist
 
 # TernJS port file
 .tern-port
+.DS_Store
