--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:cp": "react-scripts build && cp -r build/* docs/ && rm -rf build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
