--- a/src/assets/package.json
+++ b/src/assets/package.json
@@ -2,7 +2,7 @@
   "name": "imgs",
   "version": "1.0.0",
   "description": "",
-  "main": "photo-rename.js",
+  "main": "rename.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
