--- a/package.json
+++ b/package.json
@@ -3,28 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^24.0.0",
-    "@types/lodash": "^4.14.157",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-lazyload": "^2.6.0",
-    "@types/webpack-env": "^1.15.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^17.0.2",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/webpack-env": "^1.16.3",
     "classnames": "^2.2.6",
-    "exifreader": "^3.12.0",
+    "exifreader": "^4.1.0",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-lazyload": "^3.0.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.1",
-    "typescript": "~3.7.2"
+    "sass": "^1.45.1",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
