--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react-dom": "^17.0.9",
     "@types/webpack-env": "^1.16.3",
     "classnames": "^2.2.6",
-    "exifreader": "^4.1.0",
+    "exif-js": "^2.3.0",
+    "image-size": "^1.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "react": "^17.0.2",
