--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "image-size": "^1.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
+    "piexif": "^0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lazyload": "^3.0.0",
@@ -28,8 +29,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build:code": "react-scripts build",
-    "build:photo": "node ./src/assets/rename.js",
+    "build:code": "node ./scripts/build-code.js",
+    "build:photo-rename": "node ./src/assets/rename.js",
+    "build:photo-clean-gps": "node ./src/assets/clean-gps.js",
     "build": "npm run build:photo && npm run build:code",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,5 +50,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
